<resources>

	<string name="app_name">Translate</string>
	<string name="empty_list_history">No translations in History</string>
	<string name="empty_list_favourites">No translations in Favourites</string>
	<string name="empty_search">No matches were found</string>
	<string name="open_drawer">Open NavigationDrawer</string>
	<string name="close_drawer">Close NavigationDrawer</string>
	<string name="dictionary">Alternative translations</string>
	<string name="try_again">Try again</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="wait_loading_languages">Loading languages list. Please, wait…</string>
	<string name="text_copied">Translation copied</string>
	<string name="share_translation_with">Share translation with…</string>
	<string name="recently_used_languages">Recently used languages</string>
	<string name="all_languages">All languages</string>
	<string name="title_choose_lang">Choose language</string>
	<string name="history_clear_dialog_title">Clear history</string>
	<string name="history_clear_dialog_subtitle">Are you sure you want to clear history?</string>
	<string name="history_was_cleared">History cleared!z</string>

	<!--Hints-->
	<string name="hint_edit_original_text">Type text</string>
	<string name="hint_edit_search">Search</string>

	<!--Errors-->
	<string name="error_loading_languages">Failed to load languages list!</string>
	<string name="error_load_translation">Failed to load translation</string>
	<string name="error_bad_network">Please check Internet connection</string>
	<string name="error_unexpected">Unexpected error</string>
	<string name="error_no_email_app">There is no E-mail application. E-mail copied in clipboard.</string>

	<!--Actions-->
	<string name="action_translate">Translate</string>
	<string name="action_history">History</string>
	<string name="action_favourites">Favourites</string>
	<string name="action_settings">Settings</string>
	<string name="action_about">About</string>
	<string name="action_copy">Copy</string>
	<string name="action_share">Share</string>
	<string name="action_fullscreen">Fullscreen</string>
	<string name="action_reverse_translate">Reverse translation</string>

	<!--Settings-->
	<string name="settings_show_dictionary">Show dictionary</string>
	<string name="settings_return">Tap \"Return\" for translate</string>
	<string name="settings_simultaneous_translation">Simultaneous translation</string>
	<string name="settings_clear">Clear history</string>

	<!--About-->
	<string name="about_app">Test task for the Mobile Development School on Android, organized by Yandex in the framework of the project \"Mobilization\"</string>
	<string name="about_contact_me">Contact me</string>
	<string name="about_site_title">Developer\'s site</string>
	<string name="about_view_in_play_store">View in Play Store</string>
	<string name="about_email" translatable="false">buzmakov.da@gmail.com</string>
	<string name="about_source_code" translatable="false">https://github.com/bacecek/translator</string>
	<string name="about_source_code_title">Source code on GitHub</string>
	<string name="about_version_prefix" translatable="false">ver.</string>
	<string name="about_contact_via">Contact via…</string>
</resources>
