<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context="com.bacecek.translate.ui.activity.SplashScreenActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/view_loading"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		android:layout_marginBottom="20dp"
		android:layout_alignParentBottom="true"
		android:visibility="gone">

		<ProgressBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/view_progress"
			android:indeterminate="true"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/wait_loading_languages"
			android:textColor="@android:color/white"
			android:layout_marginTop="10dp"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/view_error"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		android:layout_marginBottom="20dp"
		android:layout_alignParentBottom="true"
		android:visibility="gone">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/error_loading_languages"
			android:textColor="@android:color/white"/>

		<android.support.v7.widget.AppCompatButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btn_retry"
			app:backgroundTint="@color/colorPrimaryDark"
			android:text="@string/try_again"
			android:textColor="@android:color/white"/>

	</LinearLayout>

</RelativeLayout>
